--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
             <div class="furniture-input-form">
                 <h2>家具を追加</h2>
+                <p>家具を左クリックしながらマウスホイールを動かして向きを変える</p>
                 <div>
                     <label for="furniture-name">名前:</label>
                     <input type="text" id="furniture-name" value="机" required>
